style.css - made the header fixed, adjusted colors, transparency and whitespace

--- a/style.css
+++ b/style.css
@@ -114,8 +114,20 @@ th {
 
 /* ID selectors for main page layout
 -------------------------------------------------------------- */
-#header, #main {
+#header{
     padding: 10px;
+    position: fixed;
+}
+#main {
+    margin-top: 60px;   /* Compensate for fixed header */
+    padding: 20px;
+}
+#header, #footer {
+    background-color: rgb(170, 170, 170);
+    border-top: 1px solid #666;
+    border-bottom: 1px solid #666;
+    box-sizing: border-box;
+    width: 100%;
 }
 
 /* Branding (top section of each page)
@@ -127,7 +139,7 @@ th {
 #site-title {
     font-size: 2em;
 	font-weight: bold;
-    margin-left: 20px;
+    margin: 0px 20px;
     white-space: nowrap;
 }
 #site-description {
@@ -210,11 +222,9 @@ th {
 #container {
     display: flex;
     justify-content: center;
-    margin: 20px auto;
     width: 100%;
 }
 #content {
-    margin: 20px 10px;
 	padding: 10px 40px 30px 40px;
 }
 #content ul,
@@ -241,8 +251,6 @@ th {
 /* Footer
 -------------------------------------------------------------- */
 #footer {
-    background-color: rgba(170, 170, 170, 0.9);
-    border-top: 1px solid #666;
 	clear: both;
     display: flex;
     padding: 10px 8px;
@@ -280,7 +288,7 @@ th {
 }
 
 .transparent-document-paper {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.85);
     outline: 4px ridge #aaa;
     border-radius: 10px;
     max-width: 800px;
